--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,14 @@ body {
 
 .header{background-color: #0075C8; color:#7fc9e9}
 
+.font18 { font-size:18px }
+.font24 { font-size:24px }
+.font36 { font-size:36px }
+.font48 { font-size:48px }
+.font60 { font-size:60px }
+.font72 { font-size:72px }
+.font96 { font-size:96px }
+
 
 
 
